--- a/src/renderer/styles/main.less
+++ b/src/renderer/styles/main.less
@@ -31,7 +31,7 @@ body {
   }
 
   span.icontext {
-    background: transparent url(../assets/images/folder.svg) no-repeat inherit left center;
+    background: transparent url(../../assets/images/folder.png) no-repeat inherit left center;
     padding-left: 10px /* at least the width of the icon */
   }
   ul {
@@ -50,5 +50,44 @@ body {
 
   * {
     transition: all 1s ease;
+  }
+
+  .three-bounce > div {
+    width: 18px;
+    height: 18px;
+    background-color: #333;
+
+    border-radius: 100%;
+    display: inline-block;
+    -webkit-animation: bouncedelay 1.4s infinite ease-in-out;
+    animation: bouncedelay 1.4s infinite ease-in-out;
+    /* Prevent first frame from flickering when animation starts */
+    -webkit-animation-fill-mode: both;
+    animation-fill-mode: both;
+  }
+
+  .three-bounce .bounce1 {
+    -webkit-animation-delay: -0.32s;
+    animation-delay: -0.32s;
+  }
+
+  .three-bounce .bounce2 {
+    -webkit-animation-delay: -0.16s;
+    animation-delay: -0.16s;
+  }
+
+  @-webkit-keyframes bouncedelay {
+    0%, 80%, 100% { -webkit-transform: scale(0.0) }
+    40% { -webkit-transform: scale(1.0) }
+  }
+
+  @keyframes bouncedelay {
+    0%, 80%, 100% {
+      transform: scale(0.0);
+      -webkit-transform: scale(0.0);
+    } 40% {
+        transform: scale(1.0);
+        -webkit-transform: scale(1.0);
+      }
   }
 }
